--- a/react/src/styles/fonts.css
+++ b/react/src/styles/fonts.css
@@ -13,3 +13,13 @@
     src: url('../assets/font/Inter-Bold.ttf');
     font-display: swap;
 }
+@font-face {
+    font-family: 'inter-regular';
+    src: url('../assets/font/Inter-Regular.ttf');
+    font-display: swap;
+}
+@font-face {
+    font-family: 'inter-semibold';
+    src: url('../assets/font/Inter-SemiBold.ttf');
+    font-display: swap;
+}
